fix: update npm registry and network settings

--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   },
   "devDependencies": {
     "nodemon": "^3.0.3"
+  },
+  "config": {
+    "registry": "https://registry.npmmirror.com"
   }
-} 
+}
