--- a/bunblebeeClub/project.private.config.json
+++ b/bunblebeeClub/project.private.config.json
@@ -3,5 +3,6 @@
     "projectname": "bunblebeeClub",
     "setting": {
         "compileHotReLoad": true
-    }
+    },
+    "libVersion": "3.7.9"
 }
